--- a/testFeedBack.html
+++ b/testFeedBack.html
@@ -2,43 +2,21 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="feedback.css">
 	<script type="text/javascript" src='jquery.js'></script>
 	<script type="text/javascript" src="feedback.js"></script>
-	<style type="text/css">
-		html{
-			width: 100%;
-			height: 100%;
-		}
-		body{
-			position: relative;
-			margin: 0px 0px;
-			padding: 0px 0px;
-			border: none;
-		}
-		div.feedBackMessage{
-			width: 100%;
-			height: 30px;
-			font-size: 16px;
-			line-height: 30px;
-			text-align: center;
-			background-color: red;
-			color: white;
-			font-family: "Microsoft Yahei";
-			z-index: 9999;
-			position: absolute;
-			top: -200px;
-			left: 0px;
-			padding: 0px 0px;
-			margin: 0px 0px;
-			border: 0px 0px; 
-		}
-	</style>
+	
 </head>
 <body>
-	<button id="showButton">Click</button>
+	<button id="showError">Error</button>
+	<button id="showSuccess">Success</button>
 	<script type="text/javascript">
-		$("#showButton").click(function(){
-			$.feedBack("test","Try again!");
+		$("#showError").click(function(){
+			$.feedBackError("test","Try again!");
+		});
+
+		$("#showSuccess").click(function(){
+			$.feedBackSuccess("test2","Congratulations!");
 		})
 	</script>
 </body>
