修复提示信息位置bug

--- a/testFeedBack.html
+++ b/testFeedBack.html
@@ -12,11 +12,11 @@
 	<button id="showSuccess">Success</button>
 	<script type="text/javascript">
 		$("#showError").click(function(){
-			$.feedBackError("test","Try again!");
+			$.feedbackError("test","Try again!");
 		});
 
 		$("#showSuccess").click(function(){
-			$.feedBackSuccess("test2","Congratulations!");
+			$.feedbackSuccess("test2","Congratulations!");
 		})
 	</script>
 </body>
